--- a/Chile.html
+++ b/Chile.html
@@ -12,7 +12,7 @@
         integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
         crossorigin="" />
     <!-- Link del CSS -->
-    <link rel="stylesheet" type="text/css" href="chile.css">
+    <link rel="stylesheet" type="text/css" href="Chile.css">
     <link rel="stylesheet" type="text/css" href="Leaflet-MiniMap-master\dist\control.MinMap.main.css">
 
     <!--Jquery, necesario para la lectura de los datos.-->
