--- a/luis/basico/Chile.html
+++ b/luis/basico/Chile.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<link>
+<head>
+    <title>Mapa 1</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!--Jquery, necesario para la lectura de los datos.-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
+        integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
+        crossorigin=""></script>
+
 
     <!-- Link viene de la documentación -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"
@@ -13,15 +20,10 @@
         crossorigin="" />
     <!-- Link del CSS -->
     <link rel="stylesheet" type="text/css" href="Chile.css">
-    
-    <!--Jquery, necesario para la lectura de los datos.-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
-
 <body>
-    <h4>Comunas Chile</h4>
-
-
     <div id="mapid">
         <div id="menu">
             <ul>
@@ -31,34 +33,12 @@
             </ul>
         </div>
     </div>
-    <!-- div que contiene el mapa -->
-    <div id="map1"></div>
+    <!-- div que contiene el mapa 
+    <div id="map1"></div>-->
 
     <!-- Link viene de la documentación -->
-    <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
-        integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
-        crossorigin=""></script>
-    <!-- Link del Js -->
-    <script>
-    function getData(urlData) {
-        let rawData;
-        $.get({
-            url: urlData,
-            success: function (data, status) {
-                rawData = data;
-            }, async: false
-        });
-        return JSON.parse(rawData);
-    }
-
-    const cuerposagua = getData("https://raw.githubusercontent.com/Sud-Austral/DATA_MAPA_PUBLIC_V2/main/AGUAS/CUERPOS/cuerpos_agua_09201.geojson");
-    const chile = getData("https://raw.githubusercontent.com/Sud-Austral/DATA_MAPA_PUBLIC_V2/main/Chile/Comunas_Chile_2020_GCS.json");
-    
-    //chile.features= chile.features.filter (x=>x.properties.CUT_COM == "09201")
-    let comunas_filtro = ["09101","09102","09103","09104","09201","09202","09203","09204","10301","10302","10303","10304"];
-    chile.features = chile.features.filter(x => comunas_filtro.indexOf(x.properties.CUT_COM)> -1);
-    </script>
-
+    <script src="library_map.js"></script>
+    <script src="data_inicial.js"></script>
     <script src="Chile.js"></script>
 
 
