--- a/luis/mapa_v1/Chile.html
+++ b/luis/mapa_v1/Chile.html
@@ -37,6 +37,8 @@
     <div id="map1"></div>-->
 
     <!-- Link viene de la documentación -->
+    <!--Funcionalidades-->
+    
     <script src="library_map.js"></script>
     <script src="data_inicial.js"></script>
     <script src="Chile.js"></script>
