--- a/luis/mapa_OMS3/Chile.html
+++ b/luis/mapa_OMS3/Chile.html
@@ -50,9 +50,9 @@
     
     
 -->
-<script src="library_map.js"></script>
-<script src="data_inicial.js" ></script>
-<script src="Chile.js"></script>
+<script src="library_map.js?v=2"></script>
+<script src="data_inicial.js?v=2" ></script>
+<script src="Chile.js?v=2"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
