--- a/luis/mapa_globalv2/Chile.html
+++ b/luis/mapa_globalv2/Chile.html
@@ -50,10 +50,14 @@
     
     
 -->
+<!--
 <script src="data/dataGlobal.json"></script>
 <script src="data/dataCapa.json"></script>
+-->
+<script src="data/dataGlobal2.json"></script>
+<script src="data/dataCapa2.json"></script>
 <script src="data/colores.js"></script>
-
+<script src="data/iconos.js"></script>
 <script src="data2.json"></script>
 
 <script src="script/library_map2.js"></script>
