mapa terminado sin leyenda

--- a/luis/mapa_global_release/Chile.html
+++ b/luis/mapa_global_release/Chile.html
@@ -20,6 +20,14 @@
         crossorigin="" />
     <!-- Link del CSS -->
     <link rel="stylesheet" type="text/css" href="Chile.css">
+
+
+    <!-- Agrupación de puntos -->
+    <link rel="stylesheet" type="text/css" href="dist/MarkerCluster.css">
+    <link rel="stylesheet" type="text/css" href="dist/MarkerCluster.Default.css">
+    <script src="dist/leaflet.markercluster-src.js"></script>
+
+
     </head>
 <body>
     <div class="loader">
@@ -54,8 +62,8 @@
 <script src="data/dataGlobal.json"></script>
 <script src="data/dataCapa.json"></script>
 -->
-<script src="data/dataGlobal2.json"></script>
-<script src="data/dataCapa2.json"></script>
+<script src="data/dataGlobal3.json"></script>
+<script src="data/dataCapa3.json"></script>
 <script src="data/colores.js"></script>
 <script src="data/iconos.js"></script>
 <script src="data2.json"></script>
