--- a/luis/mapa_global_release/Chile.html
+++ b/luis/mapa_global_release/Chile.html
@@ -68,8 +68,8 @@
 <script src="data/iconos.js"></script>
 <script src="data2.json"></script>
 
-<script src="script/library_map2.js"></script>
-<script src="script/initial.js"></script>
+<script src="script/library_map2.js?2"></script>
+<script src="script/initial.js?2"></script>
 <!--
 <script src="library_map.js"></script>
 <script src="data_inicial.js" ></script>
