--- a/luis/mapa_global_release/Chile.html
+++ b/luis/mapa_global_release/Chile.html
@@ -19,7 +19,7 @@
         integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
         crossorigin="" />
     <!-- Link del CSS -->
-    <link rel="stylesheet" type="text/css" href="Chile.css">
+    <link rel="stylesheet" type="text/css" href="Chile.css?3">
 
 
     <!-- Agrupación de puntos -->
