--- a/luis/mapa_global_release/Chile.html
+++ b/luis/mapa_global_release/Chile.html
@@ -19,7 +19,7 @@
         integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
         crossorigin="" />
     <!-- Link del CSS -->
-    <link rel="stylesheet" type="text/css" href="Chile.css?4">
+    <link rel="stylesheet" type="text/css" href="Chile.css?9">
 
 
     <!-- Agrupación de puntos -->
@@ -32,6 +32,18 @@
 <body>
     <div class="loader">
     </div>
+    <!--
+    <i id="clickme" style="margin-top: 5%;" class="gg-minimize-alt"> </i>
+
+    <h1 id="book">Hola</h1>
+    <script>
+        $( "#clickme" ).click(function() {
+            $( "#book" ).slideToggle( "slow", function() {
+                // Animation complete.
+            });
+            });
+    </script>
+    -->
     <div id="mapid">
         <div id="menu">
             <ul>
@@ -62,14 +74,18 @@
 <script src="data/dataGlobal.json"></script>
 <script src="data/dataCapa.json"></script>
 -->
-<script src="data/dataGlobal4.json"></script>
-<script src="data/dataCapa4.json"></script>
+<script src="data/dataGlobal5.json"></script>
+<script src="data/dataCapa5.json"></script>
+<script src="data/dataIcono1.json"></script>
+<script src="data/dataColor1.json"></script>
+
+
 <script src="data/colores.js"></script>
 <script src="data/iconos.js"></script>
 <script src="data2.json"></script>
 
-<script src="script/library_map2.js?4"></script>
-<script src="script/initial.js?4"></script>
+<script src="script/library_map2.js?9"></script>
+<script src="script/initial.js?9"></script>
 <!--
 <script src="library_map.js"></script>
 <script src="data_inicial.js" ></script>
