--- a/luis/mapa_globalv1/Chile.html
+++ b/luis/mapa_globalv1/Chile.html
@@ -32,6 +32,18 @@
 <body>
     <div class="loader">
     </div>
+    <!--
+    <i id="clickme" style="margin-top: 5%;" class="gg-minimize-alt"> </i>
+
+    <h1 id="book">Hola</h1>
+    <script>
+        $( "#clickme" ).click(function() {
+            $( "#book" ).slideToggle( "slow", function() {
+                // Animation complete.
+            });
+            });
+    </script>
+    -->
     <div id="mapid">
         <div id="menu">
             <ul>
@@ -62,8 +74,12 @@
 <script src="data/dataGlobal.json"></script>
 <script src="data/dataCapa.json"></script>
 -->
-<script src="data/dataGlobal4.json"></script>
-<script src="data/dataCapa4.json"></script>
+<script src="data/dataGlobal5.json"></script>
+<script src="data/dataCapa5.json"></script>
+<script src="data/dataIcono1.json"></script>
+<script src="data/dataColor1.json"></script>
+
+
 <script src="data/colores.js"></script>
 <script src="data/iconos.js"></script>
 <script src="data2.json"></script>
