--- a/luis/mapa_global_release/Chile.html
+++ b/luis/mapa_global_release/Chile.html
@@ -19,7 +19,7 @@
         integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
         crossorigin="" />
     <!-- Link del CSS -->
-    <link rel="stylesheet" type="text/css" href="Chile.css?9">
+    <link rel="stylesheet" type="text/css" href="Chile.css?10">
 
 
     <!-- Agrupación de puntos -->
@@ -50,6 +50,7 @@
                 <li class="op1">MAPA CLARO</li>
                 <li class="op2">MAPA OSCURO</li>
                 <li class="op3">MAPA SATELITAL</li>
+                <li onclick="print(window)">Imprimir</li>
             </ul>
             
         </div>
@@ -84,8 +85,8 @@
 <script src="data/iconos.js"></script>
 <script src="data2.json"></script>
 
-<script src="script/library_map2.js?9"></script>
-<script src="script/initial.js?9"></script>
+<script src="script/library_map2.js?10"></script>
+<script src="script/initial.js?10"></script>
 <!--
 <script src="library_map.js"></script>
 <script src="data_inicial.js" ></script>
