--- a/luis/mapa_globalv1/Chile.html
+++ b/luis/mapa_globalv1/Chile.html
@@ -50,6 +50,7 @@
                 <li class="op1">MAPA CLARO</li>
                 <li class="op2">MAPA OSCURO</li>
                 <li class="op3">MAPA SATELITAL</li>
+                <li onclick="print(window)">Imprimir</li>
             </ul>
             
         </div>
