--- a/luis/mapa_globalv1/Chile.html
+++ b/luis/mapa_globalv1/Chile.html
@@ -19,7 +19,7 @@
         integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
         crossorigin="" />
     <!-- Link del CSS -->
-    <link rel="stylesheet" type="text/css" href="Chile.css">
+    <link rel="stylesheet" type="text/css" href="Chile.css?100">
 
 
     <!-- Agrupación de puntos -->
@@ -44,7 +44,8 @@
             });
     </script>
     -->
-    <div id="mapid">
+    
+    <div id="mapid" class="landscape">
         <div id="menu">
             <ul>
                 <li class="op1">MAPA CLARO</li>
@@ -55,6 +56,7 @@
             
         </div>
     </div>
+    <h1 style="margin-top: 100vh;">Hola</h1>
     <!--
     <div class="form-check">
         <input type="checkbox" class="form-check-input" id="exampleCheck1">
@@ -77,16 +79,17 @@
 -->
 <script src="data/dataGlobal5.json"></script>
 <script src="data/dataCapa5.json"></script>
-<script src="data/dataIcono1.json"></script>
-<script src="data/dataColor1.json"></script>
+
+<script src="data/dataIcono1.json?100"></script>
+<script src="data/dataColor1.json?100"></script>
 
 
 <script src="data/colores.js"></script>
 <script src="data/iconos.js"></script>
 <script src="data2.json"></script>
 
-<script src="script/library_map2.js"></script>
-<script src="script/initial.js"></script>
+<script src="script/library_map2.js?100"></script>
+<script src="script/initial.js?100"></script>
 <!--
 <script src="library_map.js"></script>
 <script src="data_inicial.js" ></script>
