--- a/publicaciones/mapa_municipio_global/base.html
+++ b/publicaciones/mapa_municipio_global/base.html
@@ -46,15 +46,18 @@
     <script src="data/dataGlobal3.json"></script>
 <script src="data/dataCapa3.json"></script>
 -->
-<script src="data/dataIcono1.json?101"></script>
-<script src="data/dataColor1.json?101"></script>
+<script src="data/dataIcono1.json?109"></script>
+<script src="data/dataColor1.json?109"></script>
 
-
+<!--Datos colores y iconos-->
 <script src="data/colores.js"></script>
 <script src="data/iconos.js"></script>
 <script src="data2.json"></script>
 
+<!--Datos de las capas-->
 <script src="script/library_map.js?102"></script>
+
+<!--Aca se construyen los mapas-->
 <script src="script/library_map2.js?102"></script>
 <script src="script/initial.js?102"></script>
 <!--
