--- a/luis/bases/main/Index.html
+++ b/luis/bases/main/Index.html
@@ -26,8 +26,10 @@
     <script src="dist/leaflet-providers.js"></script>
 </head>
 <body>
+    
     <div class="loader">
     </div>
+        
     <div id="mapid" class="landscape">
         <div id="menu">
             <ul>
@@ -55,10 +57,21 @@
 <script src="data/colores.js"></script>
 <script src="data/iconos.js"></script>
 
+<!--
 
-<script src="script/library_map.js?103"></script>
-<script src="script/library_map2.js?103"></script>
+
 <script src="script/initial.js?103"></script>
+
+<script src="script/map_render.js"></script>
+-->
+<script src="script/library_map.js?103"></script>
+<script src="script/library_map2.js?"></script>
+
+<script src="script/general_var.js"></script>
+<script src="script/clases.js"></script>
+
+<script src="script/test.js"></script>
+
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
