--- a/luis/bases/main/Index.html
+++ b/luis/bases/main/Index.html
@@ -18,12 +18,13 @@
         integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
         crossorigin="" />
     <!-- Link del CSS -->
-    <link rel="stylesheet" type="text/css" href="style/base.css">
+    <link rel="stylesheet" type="text/css" href="style/base.css?1031">
     <!-- Agrupación de puntos -->
     <link rel="stylesheet" type="text/css" href="dist/MarkerCluster.css">
     <link rel="stylesheet" type="text/css" href="dist/MarkerCluster.Default.css">
     <script src="dist/leaflet.markercluster-src.js"></script>
     <script src="dist/leaflet-providers.js"></script>
+    <script src="dist/save/FileSaver.js"></script>
 </head>
 <body>
     
@@ -37,11 +38,33 @@
                 <li class="op2">MAPA OSCURO</li>
                 <li class="op3">MAPA SATELITAL</li>
                 -->
-                <li onclick="print(window)">Imprimir</li>
+                <li onclick="print(window);">Imprimir</li>
+                <li onclick="Download();">Descargar</li>
             </ul>
             
         </div>
     </div>
+    <script>
+        //print(window);
+        function Download(){
+            var data = dataCapaGlobal
+            data.forEach(element => {
+                delete element.idcapa;
+                delete element["url_ícono"];
+                delete element["url"];    
+                delete element["urlData"];
+            });;
+            var fileName = 'myData.json';
+
+            // Create a blob of the data
+            var fileToSave = new Blob([JSON.stringify(data)], {
+                type: 'application/json'
+            });
+
+            // Save the file
+            saveAs(fileToSave, fileName);
+        }
+    </script>
 
 
 
@@ -65,13 +88,13 @@
 
 <script src="script/map_render.js"></script>
 -->
-<script src="script/library_map.js?103"></script>
-<script src="script/library_map2.js?"></script>
+<script src="script/library_map.js?1031"></script>
+<script src="script/library_map2.js?1031"></script>
 
-<script src="script/general_var.js"></script>
-<script src="script/clases.js"></script>
+<script src="script/general_var.js?1031"></script>
+<script src="script/clases.js?1031"></script>
 
-<script src="script/test.js"></script>
+<script src="script/test.js?1031"></script>
 
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
