--- a/luis/bases/main/Index.html
+++ b/luis/bases/main/Index.html
@@ -18,7 +18,7 @@
         integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
         crossorigin="" />
     <!-- Link del CSS -->
-    <link rel="stylesheet" type="text/css" href="style/base.css?1031">
+    <link rel="stylesheet" type="text/css" href="style/base.css?22020923">
     <!-- Agrupación de puntos -->
     <link rel="stylesheet" type="text/css" href="dist/MarkerCluster.css">
     <link rel="stylesheet" type="text/css" href="dist/MarkerCluster.Default.css">
@@ -88,13 +88,13 @@
 
 <script src="script/map_render.js"></script>
 -->
-<script src="script/library_map.js?1031"></script>
-<script src="script/library_map2.js?1031"></script>
+<script src="script/library_map.js?22020923"></script>
+<script src="script/library_map2.js?22020923"></script>
 
-<script src="script/general_var.js?1031"></script>
-<script src="script/clases.js?1031"></script>
+<script src="script/general_var.js?22020923"></script>
+<script src="script/clases.js?22020923"></script>
 
-<script src="script/test.js?1031"></script>
+<script src="script/test.js?22020923"></script>
 
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
