--- a/luis/bases/main/Index.html
+++ b/luis/bases/main/Index.html
@@ -54,7 +54,7 @@
                 delete element["url"];    
                 delete element["urlData"];
             });;
-            var fileName = 'myData.json';
+            var fileName = 'test.json';
 
             // Create a blob of the data
             var fileToSave = new Blob([JSON.stringify(data)], {
