--- a/luis/bases/main/Index.html
+++ b/luis/bases/main/Index.html
@@ -40,6 +40,7 @@
                 -->
                 <li onclick="print(window);">Imprimir</li>
                 <li onclick="Download();">Descargar</li>
+                <li onclick="Download();">Home</li>
             </ul>
             
         </div>
@@ -89,9 +90,11 @@
 <script src="script/map_render.js"></script>
 -->
 <script src="script/library_map.js?22020923"></script>
+<!-- Funciones para armar los mapas-->
 <script src="script/library_map2.js?22020923"></script>
-
+<!-- Funciones generales y variables para armar los mapas-->
 <script src="script/general_var.js?22020923"></script>
+
 <script src="script/clases.js?22020923"></script>
 
 <script src="script/test.js?22020923"></script>
