--- a/luis/bases/mainMulti_vigilancia/Index.html
+++ b/luis/bases/mainMulti_vigilancia/Index.html
@@ -58,6 +58,7 @@
         <div id="menu">
             <ul>
                 <li onclick="openNav()" style="font-size:30px;cursor:pointer">&#9776; open</li>
+                <li onclick="marcarTodoComuna(this);">Ocultar comunas</li>
                 <li onclick="print(window);">Imprimir</li>
                 <li onclick="Download();">Descargar</li>
                 <li onclick="Download();">Home</li>
