--- a/luis/bases/mainMulti_vigilancia/Index.html
+++ b/luis/bases/mainMulti_vigilancia/Index.html
@@ -57,7 +57,7 @@
     <div id="mapid" class="landscape">
         <div id="menu">
             <ul>
-                <li onclick="openNav()" style="font-size:30px;cursor:pointer">&#9776; open</li>
+                <li onclick="openNav()" style="font-size:30px;cursor:pointer">&#9776; Abrir </li>
                 <li onclick="marcarTodoComuna(this);">Ocultar comunas</li>
                 <li onclick="print(window);">Imprimir</li>
                 <li onclick="Download();">Descargar</li>
