--- a/luis/bases/mainMulti_vigilancia/Index.html
+++ b/luis/bases/mainMulti_vigilancia/Index.html
@@ -10,13 +10,19 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js" integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
+    <!--
     <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
         integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
         crossorigin=""></script>
+    -->
     <!-- Link viene de la documentación -->
+    <!--
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"
         integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
         crossorigin="" />
+    -->
     <!-- Link del CSS -->
     <link rel="stylesheet" type="text/css" href="style/base.css?22020923">
     <!-- Agrupación de puntos -->
@@ -62,6 +68,7 @@
                 <li onclick="print(window);">Imprimir</li>
                 <li onclick="Download();">Descargar</li>
                 <li onclick="Download();">Home</li>
+                <li onclick="mostrarLegenda();">Test</li>
             </ul>
             
         </div>
@@ -119,7 +126,7 @@
 <script src="script/clases.js?22020923"></script>
 
 <script src="script/test.js?22020923"></script>
-
+<script src="script/legend.js?22020923"></script>
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
