--- a/luis/bases/mainMulti_vigilancia/Index.html
+++ b/luis/bases/mainMulti_vigilancia/Index.html
@@ -62,6 +62,7 @@
                 <li onclick="print(window);">Imprimir</li>
                 <li onclick="Download();">Descargar</li>
                 <li onclick="Download();">Home</li>
+                <li onclick="test();">test</li>
             </ul>
             
         </div>
@@ -119,7 +120,7 @@
 <script src="script/clases.js?22020923"></script>
 
 <script src="script/test.js?22020923"></script>
-
+<script src="script/legend.js?22020923"></script>
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
