--- a/luis/bases/mainMulti_vigilancia/Index.html
+++ b/luis/bases/mainMulti_vigilancia/Index.html
@@ -33,7 +33,7 @@
     <script src="dist/leaflet.markercluster-src.js"></script>
     <script src="dist/leaflet-providers.js"></script>
     <script src="dist/save/FileSaver.js"></script>
-    <script src="sideMenu/sideMenu.js"></script>
+    <script src="sideMenu/sideMenu.js?220209239"></script>
 </head>
 <body>
   
