--- a/luis/bases/mainMulti_vigilancia/Index.html
+++ b/luis/bases/mainMulti_vigilancia/Index.html
@@ -24,7 +24,7 @@
         crossorigin="" />
     -->
     <!-- Link del CSS -->
-    <link rel="stylesheet" type="text/css" href="style/base.css?78767">
+    <link rel="stylesheet" type="text/css" href="style/base.css?2394857020">
     <!-- Agrupación de puntos -->
     <link rel="stylesheet" type="text/css" href="dist/MarkerCluster.css">
     <link rel="stylesheet" type="text/css" href="dist/MarkerCluster.Default.css">
@@ -33,7 +33,7 @@
     <script src="dist/leaflet.markercluster-src.js"></script>
     <script src="dist/leaflet-providers.js"></script>
     <script src="dist/save/FileSaver.js"></script>
-    <script src="sideMenu/sideMenu.js?78767"></script>
+    <script src="sideMenu/sideMenu.js?2394857020"></script>
 </head>
 <body>
   
@@ -145,24 +145,24 @@
 <script src="script/initial.js?103"></script>
 
 <script src="script/map_render.js"></script>
-<script src="script/layer.js?78767"></script>
+<script src="script/layer.js?2394857020"></script>
 -->
 
-<script src="layers/layerUtil.js?78767"></script>
-<script src="layers/allLayers.js?78767"></script>
-<script src="layers/layer.js?78767"></script>
+<script src="layers/layerUtil.js?2394857020"></script>
+<script src="layers/allLayers.js?2394857020"></script>
+<script src="layers/layer.js?2394857020"></script>
 
-<script src="script/library_map.js?78767"></script>
+<script src="script/library_map.js?2394857020"></script>
 <!-- Funciones para armar los mapas-->
-<script src="script/library_map2.js?78767"></script>
+<script src="script/library_map2.js?2394857020"></script>
 <!-- Funciones generales y variables para armar los mapas-->
-<script src="script/general_var.js?78767"></script>
+<script src="script/general_var.js?2394857020"></script>
 
-<script src="script/clases.js?78767"></script>
+<script src="script/clases.js?2394857020"></script>
 
-<script src="script/test.js?78767"></script>
-<script src="script/legend.js?78767"></script>
-<script src="script/showLayer.js?78767"></script>
+<script src="script/test.js?2394857020"></script>
+<script src="script/legend.js?2394857020"></script>
+<script src="script/showLayer.js?2394857020"></script>
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
