--- a/luis/bases/mainMulti_vigilancia/Index.html
+++ b/luis/bases/mainMulti_vigilancia/Index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js" integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
     <!-- Link del CSS -->
-    <link rel="stylesheet" type="text/css" href="style/base.css?5456457682">
+    <link rel="stylesheet" type="text/css" href="style/base.css?234679">
     <!-- Agrupación de puntos -->
     <link rel="stylesheet" type="text/css" href="dist/MarkerCluster.css">
     <link rel="stylesheet" type="text/css" href="dist/MarkerCluster.Default.css">
@@ -21,7 +21,7 @@
     <script src="dist/leaflet.markercluster-src.js"></script>
     <script src="dist/leaflet-providers.js"></script>
     <script src="dist/save/FileSaver.js"></script>
-    <script src="sideMenu/sideMenu.js?5456457682"></script>
+    <script src="sideMenu/sideMenu.js?234679"></script>
 </head>
 <body>  
     <!-- Modal -->
@@ -129,29 +129,29 @@
 <!--
 <script src="script/initial.js?103"></script>
 <script src="script/map_render.js"></script>
-<script src="script/layer.js?5456457682"></script>
+<script src="script/layer.js?234679"></script>
 -->
-<script src="layers/layerUtil.js?5456457682"></script>
-<script src="layers/allLayers.js?5456457682"></script>
-<script src="layers/layer.js?5456457682"></script>
+<script src="layers/layerUtil.js?234679"></script>
+<script src="layers/allLayers.js?234679"></script>
+<script src="layers/layer.js?234679"></script>
 
-<script src="script/library_map.js?5456457682"></script>
+<script src="script/library_map.js?234679"></script>
 <!-- Funciones para armar los mapas-->
-<script src="script/library_map2.js?5456457682"></script>
+<script src="script/library_map2.js?234679"></script>
 <!-- Funciones generales y variables para armar los mapas-->
-<script src="script/general_var.js?5456457682"></script>
+<script src="script/general_var.js?234679"></script>
 
-<script src="script/clases.js?5456457682"></script>
+<script src="script/clases.js?234679"></script>
 
-<script src="script/test.js?5456457682"></script>
-<script src="script/legend.js?5456457682"></script>
-<script src="script/showLayer.js?5456457682"></script>
-<script src="script/modal.js?5456457682"></script>
+<script src="script/test.js?234679"></script>
+<script src="script/legend.js?234679"></script>
+<script src="script/showLayer.js?234679"></script>
+<script src="script/modal.js?234679"></script>
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
-<script>console.log(5456457682)</script>
+<script>console.log(234679)</script>
 </body>
 </html>
 
